<resources>
    <string name="app_name">iHoro</string>
    <string name="person">Tử vi cá nhân</string>
    <string name="couple">Tử vi cặp đôi</string>
    <string name="numerology">Thần số học</string>
    <string name="saved">Hồ sơ đã lưu</string>
    <string name="infor">Tổng quan</string>
    <string name="AppInfo">Nhà phát triển: Nickken\n\nĐơn vị bảo hộ: Programing PTIT\n\nQuốc gia: Việt Nam</string>
    <string name="HoroInfo">Tử Vi là một bộ môn huyền học được dùng để nghiên cứu, phỏng đoán về tính cách, hoàn cảnh, công danh, sự nghiệp, tình duyên, vận hạn ở quá khứ, hiện tại và trong tương lai của cuộc đời một người dựa trên nhiều căn cứ bởi số học, nhân học,…. Tóm lại mục đích chính là để biết vận mệnh con người.\n\nKhoa Tử vi vừa là khoa học thống kê vừa là khoa bói toán và có phần mê tín dị đoan. Nếu xét theo những điều kiện cần thiết thì khoa Tử vi có thể coi là một khoa học trên một phương diện nào đó. Khoa Tử vi có hệ thống lý luận riêng với các thuật toán riêng và cách tiếp cận độc đáo để nghiên cứu nhân học.Ngoài ra khoa Tử vi còn có những luận cứ, logic rõ ràng để từ đó đưa ra những kinh nghiệm, dẫn chứng từ thực tế cuộc sống.\n\nCác dấu hiệu trên Tử vi là các chức năng cơ bản. Trong số các dấu hiệu có Chính và Phụ. Các sao này tương khắc với nhau theo quy luật âm dương khiến cho một lá số tử vi trở nên “đa năng” với nhiều biến số rất phức tạp.\n\nTuy nhiên, nó cũng phần nào cho thấy số phận con người vốn dĩ cũng phức tạp, không có sự phản ứng nhất định theo nguyên tắc của lý trí hay tình cảm. Nhưng nó cũng khiến nhiều người yêu thích khoa học rõ ràng cảm thấy việc đặt niềm tin vào Tử vi là không cần thiết.\n\nTử vi là một phương pháp, một công thức, một biểu đồ nhưng nó không đo lường một cách định lượng cũng như định tính. Nó là một hệ thống phức tạp về mối quan hệ qua lại giữa các nhân tố, và khi đưa ra thì không thể giải thích một cách máy móc hay bằng một ước lượng cụ thể nào.\n\nTử vi khiến người ta suy nghĩ về mối quan hệ giữa các yếu tố trong cuộc sống và kết luận của một tử vi đòi hỏi một kết luận dựa trên sự tổng hợp của các phán đoán địa phương. Con người và số phận trong Tử vi là một con người toàn diện, bao gồm cả thể chất và tinh thần, cả gen di truyền và bản thân, cả môi trường gia đình và xã hội, cả danh lợi. Con người đó là “sự tổng hòa của các mối quan hệ xã hội”.\n\nTử vi học không tách rời các khía cạnh và xem xét con người trong một thế giới quan tổng hợp, tương tác với môi trường xã hội, không biệt lập trong một khía cạnh cụ thể. Tuy nhiên, bản thân Tử vi cũng có những thiếu sót khiến nhiều người cho rằng Chiêm tinh học không phải là một môn khoa học, mặc dù giá trị của nó vẫn cần được công nhận.\n\nTử vi chỉ là một quá trình phán đoán dựa trên các chức năng và biến số được biểu thị bởi các vì sao trên Tử vi. Do đó, tính chính xác của Tử vi không bao giờ được đảm bảo. Việc mỗi sao khi ở trong một cung có ý nghĩa khác nhau và ý nghĩa đó thay đổi khi nó kết hợp với các sao khác nhau để tạo thành nhiều suy luận khác nhau về một Tử vi, làm nên sự huyền bí của Tử vi nhiều hơn và nhiều hơn nữa.</string>
    <color name="selectedIconColor">#ee9561</color>
    <color name="defaultIconColor">#F6F6F6</color>
    <color name="countTextColor">#fff</color>
    <color name="countBackgroundColor">#F45E0B</color>
    <color name="circleColor">#353635</color>
    <color name="backgroundBottomColor">#ee9561</color>
    <color name="shadowColor">#2E2E2E</color>
    <string-array name="gender_array">
        <item></item>
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
</resources>